force-app/main/default/objects/Opportunity/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <formula>if((CloseDate - Opened_Date__c)&lt;0,0,(CloseDate - Opened_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>