force-app/main/default/objects/Opportunity/validationRules/closed_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>closed_date_check</fullName>
    <active>true</active>
    <errorConditionFormula>CloseDate &lt;  Opened_Date__c</errorConditionFormula>
    <errorMessage>Closed date should be after opened date</errorMessage>
</ValidationRule>