force-app/main/default/objects/Opportunity/validationRules/Mandatory_typr.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_typr</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(TEXT(Type))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>TYPE is mandatory</errorMessage>
</ValidationRule>